--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Leala Montes!</h1>
-				<p>I'm best known as a teacher in Four Winds Elementary School! <em>Learning</em> Education. <a href="/about">Read more about my life...</a></p>
+				<p>I'm best known as a teacher at Four Winds Elementary School! <em>Learning</em> Education. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:lmontes@bcoe.org">email</a></li>
-        		<li><a href="https://github.com/eljr">github.com/lealamontes</a></li>
+        		<li><a href="https://eljr.github.io">lealamontes</a></li>
 			</ul>
 		</footer>
 	</body>
