--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 				<p>I'm best known as a teacher at Four Winds Elementary School! <em>Learning</em> Education. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		
+	<div class="jumbotron">
+      <div class="container">
+        <h1>Innovation, technology.</h1>
+        <p>Learn and have fun.</p>
+      </div>
+    </div> 	
+		
+		
 		<footer>
     		<ul>
         		<li><a href="mailto:lmontes@bcoe.org">email</a></li>
