--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div><!-- /.container -->
 		
 	<div class="jumbotron">
-      <div class="container">
+      <div class="container push-spaces">
         <h1>Innovation, technology.</h1>
         <p>Learn and have fun.</p>
       </div>
