--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Leala Montes!</h1>
-				<p>I'm best known as a teacher at Four Winds Elementary School! <em>Learning</em> Education. <a href="/about">Read more about my life...</a></p>
+				<p>I'm best known as a teacher at Four Winds Elementary School! <em>Learning</em> Education. <a href="/about">Read more...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
