--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		
 	<div class="jumbotron">
       <div class="container push-spaces">
-        <h1>Innovation, technology.</h1>
+        <h1>"Where children come first."</h1>
         <p>Learn and have fun.</p>
       </div>
     </div> 	
