--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
+        		<li><a href="http://fourwinds.bcoe.org">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
@@ -24,7 +24,7 @@
 	<div class="jumbotron">
       <div class="container push-spaces">
         <h1>"Where children come first."</h1>
-        <p>Learn and have fun.</p>
+        <p>Learning while having fun.</p>
       </div>
     </div> 	
 		
