--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div><!-- /.container -->
 		
 	<div class="jumbotron">
-      <div class="container push-spaces">
+      <div class="container">
         <h1>"Where children come first."</h1>
         <p>Learning while having fun.</p>
       </div>
