--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+		<div class="nav">
+  		  <div class="container">
 		<nav>
     		<ul>
         		<li><a href="http://fourwinds.bcoe.org">Home</a></li>
@@ -14,6 +16,9 @@
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
+	          </div>
+                </div>
+		
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Leala Montes!</h1>
