--- a/index.html
+++ b/index.html
@@ -27,11 +27,24 @@
 		</div><!-- /.container -->
 		
 	<div class="jumbotron">
-      <div class="container">
-        <h1>"Where children come first."</h1>
-        <p>Learning while having fun.</p>
-      </div>
-    </div> 	
+      	  <div class="container">
+        	<h1>"Where children come first."</h1>
+        		<p>Learning while having fun.</p>
+      	  </div>
+        </div> 	
+		
+	<div>
+  		<h3>Schedule</h3>
+  		  <p>8:45 a.m. - 3:30 p.m.</p>
+  		 
+	</div>
+		
+	<div>
+ 		<h3>Learning</h3>
+  		<p>We practice Common Core standards.</p>
+  		<p><a href="#">See how to learn..</a></p>
+        </div>	
+		
 		
 		
 		<footer>
