--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       	  </div>
         </div> 	
 		
+<div class="more">
+  <div class="container">
 	<div>
   		<h3>Schedule</h3>
   		  <p>8:45 a.m. - 3:30 p.m.</p>
@@ -45,7 +47,8 @@
   		<p><a href="#">See how to learn..</a></p>
         </div>	
 		
-		
+	</div>
+</div>	
 		
 		<footer>
     		<ul>
