--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
   <div class="container">
 	<div>
   		<h3>Schedule</h3>
-  		  <p>8:45 a.m. - 3:30 p.m.</p>
+  		  <p>Mondays - Thursdays: 8:45 a.m. - 3:30 p.m.
+  		     Fridays:
+  		  </p>
   		 
 	</div>
 		
