--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
   <div class="container">
 	<div>
   		<h3>Schedule</h3>
-  		  <p>Mondays - Thursdays: 8:45 a.m. - 3:30 p.m.
-  		     Fridays:
-  		  </p>
+  		  <p>Mondays - Thursdays: 8:45 a.m. - 3:30 p.m.</p>
+  		  <p>Fridays: </p>
   		 
 	</div>
 		
