--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<div>
  		<h3>Learning</h3>
   		<p>We practice Common Core standards.</p>
-  		<p><a href="#">See how to learn..</a></p>
+  		<p><a href="#">See more...</a></p>
         </div>	
 		
 	</div>
