--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
         </div>	
 		
 	</div>
+	
+	<div>
+			<h3>Trust</h3>
+			<p>From </p>
+			<p><a href="#">Learn more</a></p>
+	</div>
+
 </div>	
 		
 		<footer>
