--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		
 		<title>Leala Montes, Teacher</title>
 		<!-- link to main stylesheet -->
+		<link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
