--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		
 		<title>Leala Montes, Teacher</title>
 		<!-- link to main stylesheet -->
-		
+		<link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
 
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
