--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div>
   		<h3>Schedule</h3>
   		  <p>Mondays - Thursdays: 8:45 a.m. - 3:30 p.m.</p>
-  		  <p>Fridays: </p>
+  		  <p>Fridays: 8:45 a.m. - 2:00 p.m.</p>
   		 
 	</div>
 		
