--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 		<div class="nav">
   		  <div class="container">
 		<nav>
-    		<ul>
+    		<ul class="pull-left">
         		<li><a href="http://fourwinds.bcoe.org">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+	        </ul>
+	        
+	        <ul class="pull-right">
+	        	<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
