--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 		
 <div class="more">
   <div class="container">
-	<div>
+	<div class="col-md-4">
   		<h3>Schedule</h3>
   		  <p>Mondays - Thursdays: 8:45 a.m. - 3:30 p.m.</p>
   		  <p>Fridays: 8:45 a.m. - 2:00 p.m.</p>
   		 
 	</div>
 		
-	<div>
+	<div class="col-md-4">
  		<h3>Learning</h3>
   		<p>We practice Common Core standards.</p>
   		<p><a href="#">See more...</a></p>
@@ -56,7 +56,7 @@
 		
 	</div>
 	
-	<div>
+	<div class="col-md-4">
 			<h3>Trust</h3>
 			<p>From </p>
 			<p><a href="#">Learn more</a></p>
