--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		
 		<title>Leala Montes, Teacher</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<meta charset="utf-8"> 
 	</head>
 	<body>
 		<div class="nav">
