--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="bcoe.org">BCOE</a>
+                        <a href="http://www.bcoe.org">BCOE</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
