--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <!-- Pager -->
                 <ul class="pager">
                     <li class="next">
-                        <a href="#">Older Posts &rarr;</a>
+                        <a href="post1.html">Older Posts &rarr;</a>
                     </li>
                 </ul>
             </div>
