--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
                         <a href="post.html">Post</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="#">For students</a>
+                    </li>
+                    <li>
+                        <a href="#">For parents</a>
                     </li>
                     <li>
                         <a href="http://fourwinds.bcoe.org">Four Winds School</a>
