--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <a href="post.html">Post</a>
                     </li>
                     <li>
-                        <a href="#">For students</a>
+                        <a href="#">For Students</a>
                     </li>
                     <li>
-                        <a href="#">For parents</a>
+                        <a href="#">For Parents</a>
                     </li>
                     <li>
                         <a href="http://fourwinds.bcoe.org">Four Winds School</a>
