--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,8 @@
                 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
                 <form action="http://formspree.io/montesit2014@gmail.com"
                       method="POST">
-                      <input type="text" name="name"><a>Name</a>
-                      <input type="email" name="_replyto"><a>Email</a>
+                      <a>Name</a><input type="text" name="name">
+                      <a>Email</a><input type="email" name="_replyto">
                       <input type="submit" value="Send">
                 </form>
 
