--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,7 @@
                 <form action="http://formspree.io/montesit2014@gmail.com"
                       method="POST">
                       <a>Name</a><input type="text" name="name">
+                      <a>Message</a><input type="text" name="name">
                       <a>Email</a><input type="email" name="_replyto">
                       <input type="submit" value="Send">
                 </form>
