--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,7 @@
                 <form id="contactform" action="//formspree.io/montesit2014@gmail.com" method="POST">
     <input type="text" name="name" placeholder="Your name">
     <input type="email" name="_replyto" placeholder="Your email">
+    <input type="hidden" name="_subject" value="Website contact" />
     <textarea name="message" placeholder="Your message"></textarea>
     <input type="submit" value="Send">
 </form>
