--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
                         <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
             </div>
                     <button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>
-                <div id="msgSubmit" class="h3 text-center hidden"></div>
+                <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>
             </form>
             </div>
         </div>
