--- a/contact.html
+++ b/contact.html
@@ -93,27 +93,28 @@
                 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
                 <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
                 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-               <form role="form" id="contactForm">
-               <div class="row">
-                    <div class="form-group col-sm-6">
-                        <label for="name" class="h4">Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter name" required>
-                            <div class="help-block with-errors"></div>
-                    </div>
-                    <div class="form-group col-sm-6">
-                        <label for="email" class="h4">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter email" required>
-                            <div class="help-block with-errors"></div>
-                    </div>
-                </div>
-            <div class="form-group">
-                    <label for="message" class="h4 ">Message</label>
-                        <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
-            </div>
-                    <button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>
-                <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>
-            </form>
-            </div>
+               </div>
+                <div class="form-bottom contact-form">
+                                <form role="form" action="assets/contact.php" method="post">
+                                    <div class="form-group">
+                                        <label class="sr-only" for="contact-email">Email</label>
+                                        <input type="text" name="email" placeholder="Email..." class="contact-email form-control" id="contact-email">
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="sr-only" for="contact-subject">Subject</label>
+                                        <input type="text" name="subject" placeholder="Subject..." class="contact-subject form-control" id="contact-subject">
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="sr-only" for="contact-message">Message</label>
+                                        <textarea name="message" placeholder="Message..." class="contact-message form-control" id="contact-message"></textarea>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="contact-antispam">Antispam question: 7 + 5 = ?</label>
+                                        <input type="text" name="antispam" placeholder="Your answer..." class="contact-antispam form-control" id="contact-antispam">
+                                    </div>
+                                    <button type="submit" class="btn">Send message</button>
+                                </form>
+                            </div>
         </div>
     </div>
 
