--- a/contact.html
+++ b/contact.html
@@ -89,32 +89,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
-                <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
-                <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-                <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-               </div>
-                <div class="form-bottom contact-form">
-                                <form role="form" action="assets/contact.php" method="post">
-                                    <div class="form-group">
-                                        <label class="sr-only" for="contact-email">Email</label>
-                                        <input type="text" name="email" placeholder="Email..." class="contact-email form-control" id="contact-email">
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="sr-only" for="contact-subject">Subject</label>
-                                        <input type="text" name="subject" placeholder="Subject..." class="contact-subject form-control" id="contact-subject">
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="sr-only" for="contact-message">Message</label>
-                                        <textarea name="message" placeholder="Message..." class="contact-message form-control" id="contact-message"></textarea>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="contact-antispam">Antispam question: 7 + 5 = ?</label>
-                                        <input type="text" name="antispam" placeholder="Your answer..." class="contact-antispam form-control" id="contact-antispam">
-                                    </div>
-                                    <button type="submit" class="btn">Send message</button>
-                                </form>
-                            </div>
+                <p>Send me an email -> chicoermo@outlook.com</p>
+               
         </div>
     </div>
 
