--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Send me an email -> chicoermo@outlook.com</p>
+                <p style="text-align:center;">Send me an email -> chicoermo@outlook.com</p>
                
         </div>
     </div>
