--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/form-elements.css">
+        <link rel="stylesheet" href="assets/css/clean-blog.css">
         <link rel="stylesheet" href="assets/css/style.css">
  
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
