--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,7 @@
                             <h1>Bootstrap Contact Form Tutorial</h1>
                             <div class="description">
                                 <p>
-                                    Learn how to create a working Bootstrap contact form using PHP, jQuery, AJAX, HTML5 and CSS3. 
-                                    Check it out on <a href="http://azmind.com">AZMIND</a>!
+                                    Please contact me by filling out the form below.
                                 </p>
                             </div>
                         </div>
