--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2 text">
-                            <h1>Bootstrap Contact Form Tutorial</h1>
+                            <h1>Contact Form</h1>
                             <div class="description">
                                 <p>
                                     Please contact me by filling out the form below.
