--- a/contact.html
+++ b/contact.html
@@ -39,18 +39,14 @@
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2 text">
                             <h1>Contact Form</h1>
-                            <div class="description">
-                                <p>
-                                    Please contact me by filling out the form below.
-                                </p>
-                            </div>
+                           
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-6 col-sm-offset-3 form-box">
                             <div class="form-top">
                                 <h3>Contact us</h3>
-                                <p>Fill in the form below to send us a message:</p>
+                                <p>Fill in the form below to send a message:</p>
                             </div>
                             <div class="form-bottom contact-form">
                                 <form role="form" action="assets/contact.php" method="post">
