--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
+                        <a href="http://fourwinds.bcoe.org/">Four Winds</a>
+                    </li>
+                    <li>
+                        <a href="#">For Parents</a>
+                    </li>
+                    <li>
+                        <a href="#/">For Students</a>
+                    </li>
+                    <li>
                         <a href="post.html">Sample Post</a>
                     </li>
                     <li>
