--- a/post.html
+++ b/post.html
@@ -96,8 +96,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p> </p>
-                    <p>  </p>
+                    <p>Welcome Students!</p>
+                    <p>Four Winds School is participating o  </p>
 
                     <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
 
