--- a/post.html
+++ b/post.html
@@ -99,7 +99,7 @@
                     <h2 class="section-heading">Hour of Code</h2>
                     <p>Four Winds School is participating in Hour of Code.   </p>
 
-                   
+                   <a href="https://hourofcode.com/us">Learn more about Hour of Code...</a>
 
                     <h2 class="section-heading">The Final Frontier</h2>
 
