--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a href="#/">For Students</a>
                     </li>
                     <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="post.html">Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
