--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>I teach at Four Winds School.s</p>
+                <p>I teach at Four Winds Schools.</p>
             </div>
         </div>
     </div>
