--- a/about.html
+++ b/about.html
@@ -54,6 +54,9 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
+                        <a href="http://fourwinds.bcoe.org">Four Winds</a>
+                    </li>
+                    <li>
                         <a href="#">For Parents</a>
                     </li>
                     <li>
