--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <pSend me a message and I will try to get back to you within 24 hours!</p>
+                <p>Send me a message and I will try to get back to you within 24 hours!</p>
+                <p>I can be reached at lmontes at bcoe.org</p>
                 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
                 <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
                 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
