--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="http://fourwinds.bcoe.org">Four Winds</a>
+                        <a href="http://google.com">School</a>
                     </li>
                     <li>
                         <a href="#">For Parents</a>
@@ -95,7 +95,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>I teach at Four Winds Schools.</p>
+                <p>I teach at Schools.</p>
             </div>
         </div>
     </div>
