--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>Leala Montes</h1>
+                        <h1>Erickson Montes</h1>
                         <hr class="small">
-                        <span class="subheading">Educator at Four Winds School</span>
+                        <span class="subheading">Backend Developer</span>
                     </div>
                 </div>
             </div>
